--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<h1>2NewBee!</h1>
+<h1 style="text-align:center;">
+	<span style="font-family:&quot;font-size:32px;color:#333333;">Welecome 2NewBee !</span>
+</h1>
